Use java.net.URI instead of java.net.URL vertices (#737)
Unfortunately URL's `#equals` implementation is slow and broken [1, 2]. Since
the `HelloJGraphT` code is part of this library's documentation, it seems
better to use the URI class instead.

[1] https://stackoverflow.com/questions/3771081/proper-way-to-check-for-url-equality
[2] https://javaantipatterns.wordpress.com/2007/11/24/comparing-urls-with-urlequals